cf_analysis_results/checkerframework_results/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8.txt
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/json/JSONObject.java:1554: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-832 $$ java.io.Writer $$ regular method exit $$ ( 52135, 52164 ) $$ @MustCall method close may not have been invoked on temp-var-832 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/json/JSONObject.java:1556: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-833 $$ java.io.Writer $$ regular method exit $$ ( 52239, 52267 ) $$ @MustCall method close may not have been invoked on temp-var-833 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/http/Response.java:69: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-884 $$ java.io.InputStream $$ regular method exit $$ ( 2676, 2708 ) $$ @MustCall method close may not have been invoked on temp-var-884 or any of its aliases.
    	this.is = method.getResponseBodyAsStream();
    	                                        ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/http/Response.java:76: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-886 $$ java.io.InputStream $$ possible exceptional exit due to con.getInputStream() with exception type java.io.IOException $$ ( 2910, 2930 ) $$ @MustCall method close may not have been invoked on temp-var-886 or any of its aliases.
        if(null == (is = con.getErrorStream())){
                                           ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to con.getInputStream() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/http/Response.java:77: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-887 $$ java.io.InputStream $$ regular method exit $$ ( 2951, 2971 ) $$ @MustCall method close may not have been invoked on temp-var-887 or any of its aliases.
            is = con.getInputStream();
                                   ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/http/Response.java:125: error: (required.method.not.called) $$ 4 $$ method close $$ stream $$ java.io.InputStream $$ possible exceptional exit due to throw new TBlogException(ioe.getMessage(), ioe); with exception type com.sohu.t.api.sdk.TBlogException $$ ( 4339, 4371 ) $$ @MustCall method close may not have been invoked on stream or any of its aliases.
                InputStream stream = asStream();
                            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to throw new TBlogException(ioe.getMessage(), ioe); with exception type com.sohu.t.api.sdk.TBlogException
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/http/Response.java:230: error: (return) $$ 2 $$ @MustCall("close") String $$ @MustCall String $$ ( 7652, 7859 ) $$ incompatible types in return.
                '}';
                ^
  type of expression: @MustCall("close") String
  method return type: @MustCall String
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/json/JSONArray.java:920: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1050 $$ java.io.Writer $$ regular method exit $$ ( 29745, 29774 ) $$ @MustCall method close may not have been invoked on temp-var-1050 or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/json/JSONArray.java:922: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1051 $$ java.io.Writer $$ regular method exit $$ ( 29849, 29877 ) $$ @MustCall method close may not have been invoked on temp-var-1051 or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/https/MySSLSocketFactory.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.Socket $$ possible exceptional exit due to socket.connect(remoteaddr, timeout) with exception type java.io.IOException $$ ( 3012, 3057 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
			Socket socket = socketfactory.createSocket();
			       ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to socket.connect(remoteaddr, timeout) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/json/Test.java:442: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2124 $$ java.io.Writer $$ possible exceptional exit due to XML.toJSONObject(s) with exception type com.sohu.t.api.sdk.json.JSONException $$ ( 22437, 22464 ) $$ @MustCall method close may not have been invoked on temp-var-2124 or any of its aliases.
            System.out.println(j.write(new StringWriter()));
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to XML.toJSONObject(s) with exception type com.sohu.t.api.sdk.json.JSONException
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/Configuration.java:80: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2547 $$ java.io.InputStream $$ regular method exit $$ ( 3754, 3817 ) $$ @MustCall method close may not have been invoked on temp-var-2547 or any of its aliases.
                loadProperties(defaultProperty, Configuration.class.getResourceAsStream("/WEB-INF/" + sdkProps)) ||
                                                                                       ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/Configuration.java:81: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2548 $$ java.io.InputStream $$ regular method exit $$ ( 3870, 3925 ) $$ @MustCall method close may not have been invoked on temp-var-2548 or any of its aliases.
                loadProperties(defaultProperty, Configuration.class.getResourceAsStream("/" + sdkProps));
                                                                                       ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url2f44efcfa6_wangyudong_sohutw_java_sdk_2_0_tgz-pJ8-com_sohu_t_api_sdk_json_TestJ8/src/com/sohu/t/api/sdk/Configuration.java:88: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2550 $$ java.io.FileInputStream $$ possible exceptional exit due to props.load(new FileInputStream(file)) with exception type java.io.IOException $$ ( 4139, 4164 ) $$ @MustCall method close may not have been invoked on temp-var-2550 or any of its aliases.
                props.load(new FileInputStream(file));
                           ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to props.load(new FileInputStream(file)) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
